# microservices-platform

./: README.md
src/: .gitignore  .replit  GITHUB_UPLOAD.md  UPLOAD_INSTRUCTIONS.md  package-lock.json  package.json  pyproject.toml  replit.nix  start_services.py
src/.cache/replit/modules/: nodejs-20  python-3.11
src/.cache/replit/nix/: env.json
src/.upm/: store.json
src/client/src/: App.tsx
src/client/src/components/: layout.tsx
src/client/src/pages/: auth-page.tsx  dashboard.tsx  github-wizard.tsx  products.tsx  users.tsx
src/db/: schema.ts
src/gateway/: circuit-breaker.ts  index.ts  registry.ts
src/server/: auth.ts  index.ts  routes.ts
src/services/github_service/: main.py  models.py  service.py
src/services/message_queue/: models.py  queue_service.py
src/services/product_service/: main.py  models.py
src/services/user_service/: main.py  models.py
src/sql/: init.sql
